--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "alertifyjs": "^1.13.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
