--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "alertifyjs": "^1.13.1",
     "angular-font-awesome": "^3.1.2",
